css/zmon.css
* {
    box-sizing: border-box;
}

html {

}

body {
    font-family: 'Source Sans Pro';
    font-weight: 400;
    height: 100%;    
    background: rgba(68, 67, 73, .025);
}

.wrapper {
    padding-top: 100px;
    min-height: 100%;
    top: 110px;
    position: relative;
    z-index: 0;
}

main {
    max-width: 1140px;
    margin: 0 auto;
    padding: .5em;
}

img {
    max-width: 100%;
    border-radius: 2px;
}

a {
    transition: .2s ease-in-out color;
    color: #fb9521;
}

a:visited {
    color: #a43900;
}

a:hover {
    color: #ce5909;
}

a.btn {
    text-decoration: none;
}

.btn {
    transition: .2s ease-in-out background-color;
    display: inline-block;
    padding: 6px 12px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    user-select: none;
    background-image: none;
    border: 1px solid transparent;
    border-radius: 4px;
}

.btn-default {
    background-color: #fff;
}

.btn-default:hover {
    background-color: #e6e6e6;
}

/** header */
header {
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    color: white;
    z-index: 20;
}

.u-box {
    margin: .5em;
    padding-left: 2em;
    padding-right: 2em;
}

/** nav */
nav {
    background: #444349;
    min-height: 3em;
    line-height: 1;
    vertical-align: middle;
    z-index: 10;
    position: relative;
    padding: .5em;
}

nav img.logo {
    top: 8px;
    position: relative;
}

/** demo alert */

.demo {
    z-index: 0;
    position: relative;
    display: flex;
    font-size: 28px;
    padding: 5px;
    margin: 0 auto;
    justify-content: center;
    border-width: 1px;
    border-style: solid;
    transition: .2s ease-in-out background-color, border-color;
}

.demo.has-error {
    background-color: #dd3010;
    border-color: #b3270f;
    color: white;
}

.demo.has-error .alert {
    display: block;
}

.alert {
    display: none;
    padding-top: .5em;
    max-width: 375px !important;
    flex: 1;
}

.prio-1 {
    background-color: #dd3010;
    border-color: #b3270f;
}

.prio-2 {
    background-color: #e77a1d;
    border-color: #bd6418;
}

.prio-3 {
    background-color: #78B924;
    border-color: #BDE68C;
}

/** chart */

svg {
    background: #333;
    flex: 1;
    max-width: 375px !important;
}

path {
    fill: none;
    stroke: white;
    stroke-width: 2px;
}

.domain {
    stroke: none;
}

.tick text {
    stroke: lightgray;
    font-size: 10px;
}

.tick line {
    stroke-width: 1px;
    stroke: lightgray;
    stroke-dasharray: 2px 2px;
    fill: none;
}

/** hero */

.hero {
    background-image: url(../img/stardust_@2X.png);
    font-size: 4em;
    text-align: center;
    line-height: 1;
    color: white;
    height: 450px;
    margin: 0;
    padding: 0;
    top: 110px;
    position: relative;
}

.hero h1 {
    margin: 0;
    color: rgba(68, 67, 73, .75);
    text-shadow:
       -5px -5px 0 #fb9521,  
        5px -5px 0 #fb9521,
       -5px  5px 0 #fb9521,
        5px  5px 0 #fb9521;
}

.hero small {
    font-size: .5em;
    color: white;
    opacity: .5;
}

@media(max-width: 640px) {
    .hero {
        font-size: 2em;
        top: 160px;
        height: 300px;
    }
}

/** content styles */

.u-box {

}

/** footer */

footer {
    background: #444349;
    top: 230px;
    position: relative;
    height: 750px;
    color: #999;
}

/** grid */

.grid {
  width: 100%;
  display: flex;
}
@media (max-width: 640px) {
  .grid {
    display: block;
  }
  .grid .col-center {
    align-items: center;
  }
  .grid .row-center {
    align-self: center;
  }
}
@media (min-width: 640px) {
  .grid {
    flex-direction: row;
  }
}
.grid.with-gutter {
  margin-left: -2em;
}
@media (max-width: 640px) {
  .grid.with-gutter {
    margin-left: 0;
  }
}
.grid.with-gutter > .grid-col {
  padding-left: 2em;
}
@media (max-width: 640px) {
  .grid.with-gutter > .grid-col {
    padding-left: 0;
  }
}
.grid .grid-col {
  flex: 1;
  max-width: 100%;
  align-self: flex-start;
}
.grid .grid-col.col-1-8 {
  flex: 0 0 12.5%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-1-8 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-1-4 {
  flex: 0 0 25%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-1-4 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-3-8 {
  flex: 0 0 37.5%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-3-8 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-1-3 {
  flex: 0 0 33.33333333333333%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-1-3 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-1-2 {
  flex: 0 0 50%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-1-2 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-5-8 {
  flex: 0 0 62.5%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-5-8 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-2-3 {
  flex: 0 0 66.66666666666666%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-2-3 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-3-4 {
  flex: 0 0 75%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-3-4 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-7-8 {
  flex: 0 0 87.5%;
}
@media (max-width: 640px) {
  .grid .grid-col.col-7-8 {
    width: 100%;
    display: block;
  }
}
.grid .grid-col.col-top {
  align-self: flex-start;
}
.grid .grid-col.col-center {
  align-self: center;
}
.grid .grid-col.col-bottom {
  align-self: flex-end;
}
.grid .grid-col.row-top {
  align-items: flex-start;
}
.grid .grid-col.row-bottom {
  align-items: flex-end;
}
.grid .grid-col.row-center {
  align-items: center;
}

/** typo */
body {
  font-size: 1.25em;
  line-height: 1.5em;
  margin: 0 auto;
}
h1 {
  font-size: 2.35em;
  line-height: 1.276595744em;
  margin-top: 1.27659574em;
  margin-bottom: 0.63829787em;
  font-weight: 700;
}
h2 {
  font-size: 1.8em;
  line-height: 1.666666666em;
  margin-top: 1.66666667em;
  margin-bottom: 0.83333333em;
  font-weight: 700;
}
h3 {
  font-size: 1.35em;
  line-height: 1.111111111em;
  margin-top: 1.11111111em;
  margin-bottom: 1.11111111em;
  font-weight: 700;
}
h4 {
  font-size: 1em;
  line-height: 1.5em;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  font-weight: 700;
}
p, ul, ol, pre, table, blockquote {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

/* Sanitation */
hr {
  border: 1px solid;
  margin: -1px 0;
}
ul ul, ol ol, ul ol, ol ul {
  margin-top: 0;
  margin-bottom: 0;
}
b, strong, em, small, code {
  line-height: 1;
}
sup, sub {
  vertical-align: baseline;
  position: relative;
  top: -0.4em;
}
sub {
  top: 0.4em;
}

